--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
 <title>Welcome to NRES 470/670</title>
 
-<script src="site_libs/header-attrs-2.10/header-attrs.js"></script>
-<script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
+<script src="site_libs/header-attrs-2.11/header-attrs.js"></script>
+<script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link href="site_libs/bootstrap-3.3.5/css/spacelab.min.css" rel="stylesheet" />
 <script src="site_libs/bootstrap-3.3.5/js/bootstrap.min.js"></script>
@@ -343,6 +343,60 @@ div.tocify {
     <li>
       <a href="LECTURE3.html">Thomas Robert Malthus</a>
     </li>
+    <li>
+      <a href="LECTURE4.html">Population Regulation</a>
+    </li>
+    <li>
+      <a href="LECTURE5.html">Passenger Pigeon</a>
+    </li>
+    <li>
+      <a href="LECTURE6.html">Age-structured populations</a>
+    </li>
+    <li>
+      <a href="LECTURE7.html">Matrix population models</a>
+    </li>
+    <li>
+      <a href="LECTURE8.html">Stochastic population models</a>
+    </li>
+    <li>
+      <a href="LECTURE9.html">Small population paradigm</a>
+    </li>
+    <li>
+      <a href="LECTURE10.html">Individual-based models</a>
+    </li>
+    <li>
+      <a href="LECTURE11.html">Declining population paradigm</a>
+    </li>
+    <li>
+      <a href="LECTURE12.html">Population Viability Analysis</a>
+    </li>
+    <li>
+      <a href="LECTURE13.html">Metapopulations</a>
+    </li>
+    <li>
+      <a href="LECTURE14.html">PVA example: pdogs and ferrets</a>
+    </li>
+    <li>
+      <a href="LECTURE15.html">Parameter estimation</a>
+    </li>
+    <li>
+      <a href="LECTURE16.html">Species interactions: competition</a>
+    </li>
+    <li>
+      <a href="LECTURE17.html">Species interactions: prey-predator</a>
+    </li>
+    <li>
+      <a href="LECTURE18.html">Wrap-up</a>
+    </li>
+    <li>
+      <a href="PVA1_421.html">NRES421: PVA basics</a>
+    </li>
+    <li>
+      <a href="PVA2_421.html">NRES421: grizzly PVA</a>
+    </li>
+    <li>
+      <a href="PVA3_421.html">NRES421: loggerhead PVA</a>
+    </li>
   </ul>
 </li>
 <li class="dropdown">
@@ -356,7 +410,28 @@ div.tocify {
       <a href="LAB1.html">Lab 1: exponential growth</a>
     </li>
     <li>
+      <a href="LAB2.html">Lab 2: logistic growth</a>
+    </li>
+    <li>
+      <a href="LAB3.html">Lab 3: age-structured population growth</a>
+    </li>
+    <li>
+      <a href="LAB4.html">Lab 4: matrix population models</a>
+    </li>
+    <li>
+      <a href="LAB5.html">Lab 5: stochasticity and uncertainty</a>
+    </li>
+    <li>
+      <a href="LAB6.html">Lab 6: metapopulations</a>
+    </li>
+    <li>
+      <a href="LAB7.html">Lab 7: capture-mark-recapture</a>
+    </li>
+    <li>
       <a href="FINAL_PROJECTS.html">Final Projects!</a>
+    </li>
+    <li>
+      <a href="EXTRA_CREDIT.html">Extra Credit!</a>
     </li>
   </ul>
 </li>
@@ -387,7 +462,7 @@ div.tocify {
 <strong>Email</strong>: kevinshoemaker_at_unr_dot_edu<br />
 <strong>Office hours</strong>: Wed 3pm in FA 220e<br />
 <strong>Course Website</strong>: <a href="https://kevintshoemaker.github.io/NRES-470/">https://kevintshoemaker.github.io/NRES-470/</a></p>
-<p><strong>Teaching Assistant</strong> Margarete Walden (mwalden_at_nevada_dot_unr_dot_edu)<br />
+<p><strong>Teaching Assistant</strong> Margarete Walden (mwalden_dot_unr_dot_edu)<br />
 <strong>TA Office hours</strong>: TBD (check website for updates)</p>
 <div id="course-meeting-times" class="section level3">
 <h3>Course Meeting Times</h3>
@@ -473,12 +548,12 @@ Grading scale: A (100 to 93), A- (92 to 90), B+ (89 to 87), B (86 to 83), B- (82
 </div>
 <div id="top-hat" class="section level3">
 <h3>Top Hat</h3>
-<p>We will be using the <a href="www.tophat.com">Top Hat</a> classroom response system in class. You will be able to submit answers to in-class questions using Apple or Android smartphones and tablets, laptops, or through text message.</p>
+<p>We will be using the <a href="www.tophat.com">Top Hat</a> interactive learning platform in class. You will be able to submit answers to in-class questions using Apple or Android smartphones and tablets, laptops, or through text message.</p>
 <p>You can visit the Top Hat Overview (<a href="https://success.tophat.com/s/article/Student-Top-Hat-Overview-and-Getting-Started-Guide" class="uri">https://success.tophat.com/s/article/Student-Top-Hat-Overview-and-Getting-Started-Guide</a>) within the Top Hat Success Center which outlines how you will register for a Top Hat account, as well as providing a brief overview to get you up and running on the system.</p>
-<p>An invitation will be sent to you by email, but if you don’t receive this email, you can register by simply visiting our course website: <a href="https://app.tophat.com/e/809153">https://app.tophat.com/e/809153</a></p>
-<p>Note: our Course Join Code is 809153</p>
+<p>An invitation will be sent to you by email, but if you don’t receive this email, you can register by simply visiting our course website: <a href="https://app.tophat.com/e/809153">https://app.tophat.com/e/809153</a><br />
+Note: our Course Join Code is 809153</p>
 <p>Top Hat may require a paid subscription, and a full breakdown of all subscription options available can be found here: <a href="www.tophat.com/pricing">www.tophat.com/pricing</a>.</p>
-<p>Should you require assistance with Top Hat at any time, due to the fact that they require specific user information to troubleshoot these issues, please contact their Support Team directly by way of email (<a href="support@tophat.com">support@tophat.com</a>), the in app support button, or by calling 1-888-663-5491.</p>
+<p>Should you require assistance with Top Hat at any time, due to the fact that they require specific user information to troubleshoot these issues, please contact their Support Team directly by way of email (<a href="support@tophat.com">support@tophat.com</a>), the in-app support button, or by calling 1-888-663-5491.</p>
 </div>
 <div id="students-with-disabilities" class="section level3">
 <h3>Students with Disabilities</h3>
